<resources>
    <string name="app_name">Tic Tac Toe</string>
    <string name="play_offline">local game</string>
    <string name="play_online">real time game</string>

    <string name="with_person">with friend</string>
    <string name="with_cpu">with ai</string>

    <string name="share_app">invite friend</string>
    <string name="setting">Setting</string>

    <string name="tell_us_name">Tell Us Your Name!!</string>
    <string name="name_hint">Write Your Name Here</string>
    <string name="submit">Submit</string>

    <string name="tell_us_friend_name">Your Friend\'s Name!!</string>
    <string name="friend_name_hint">Write Your Friend Name Here</string>
    <string name="play">Let\'s Play</string>
    <string name="x_turn">X\'s Turn</string>
    <string name="o_turn">O\'s Turn</string>
    <string name="number_of_matches">Matches</string>

    <string name="finish">Finish</string>
    <string name="repeat">Replay</string>

    <string name="create_room">Create Playground</string>
    <string name="join_room">Join Your Friend</string>
    <string name="share_room">Share Room Info</string>
    <string name="search_hint">Find Your Friend</string>
    <string name="join">Join</string>

    <string name="email">Email ID</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="signup_using_google">Sign Up Using Google</string>
    <string name="room_label">Open Room</string>

    <string name="private_room">Play With A Friend</string>
    <string name="public_room">Play With Random Guy</string>
    <string name="enter_password_hint">Enter Password</string>
    <string name="private_name">Private</string>

    <string name="level_easy">Easy</string>
    <string name="level_medium">Medium</string>
    <string name="level_hard">Hard</string>


</resources>
