<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LoginSignupActivity"
    android:orientation="vertical"
    android:background="@color/colorLightBrown"
    android:gravity="center"
    android:id="@+id/login_signup_main_view">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/size_5dp">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/size_15dp"
            android:layout_gravity="center_horizontal"
            android:id="@+id/login_signup_logo"
            app:cardBackgroundColor="@color/colorTransparent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_tictactoe_main"
                android:contentDescription="@string/app_name" />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/size_10dp"
            android:layout_marginTop="@dimen/size_100dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/size_45dp"
                    android:background="@drawable/custom_edittext_1"
                    android:padding="@dimen/size_10dp"
                    android:textColorHint="@color/colorGray"
                    android:textColor="@color/colorWhite"
                    android:drawableEnd="@drawable/ic_email"
                    android:hint="@string/email"
                    android:maxLines="1"
                    android:inputType="textEmailAddress"
                    android:id="@+id/login_signup_email"
                    android:drawablePadding="@dimen/size_5dp"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/size_45dp"
                    android:background="@drawable/custom_edittext_1"
                    android:padding="@dimen/size_10dp"
                    android:textColorHint="@color/colorGray"
                    android:textColor="@color/colorWhite"
                    android:hint="@string/password"
                    android:layout_marginTop="@dimen/size_15dp"
                    android:drawableEnd="@drawable/ic_key"
                    android:maxLines="1"
                    android:inputType="textPassword"
                    android:id="@+id/login_signup_password"
                    android:drawablePadding="@dimen/size_5dp"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/size_45dp"
                    android:background="@drawable/custom_edittext_1"
                    android:padding="@dimen/size_10dp"
                    android:textColorHint="@color/colorGray"
                    android:textColor="@color/colorWhite"
                    android:hint="@string/confirm_password"
                    android:layout_marginTop="@dimen/size_15dp"
                    android:drawableEnd="@drawable/ic_key"
                    android:maxLines="1"
                    android:inputType="textPassword"
                    android:visibility="gone"
                    android:id="@+id/login_signup_confirm_password"
                    android:drawablePadding="@dimen/size_5dp"/>

            </LinearLayout>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/custom_ripple_effect_7"
                android:src="@drawable/ic_invisible"
                android:padding="@dimen/size_10dp"
                android:contentDescription="@string/password"
                android:id="@+id/login_signup_password_visibilty"
                android:layout_marginStart="@dimen/size_10dp"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textAllCaps="false"
            android:textColor="@color/colorRed"
            android:layout_marginTop="@dimen/size_10dp"
            android:layout_marginEnd="@dimen/size_10dp"
            android:textSize="@dimen/textsize_16sp"
            android:id="@+id/login_signup_forgot_password"
            android:layout_gravity="end" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_20dp"
            android:layout_marginStart="@dimen/size_10dp"
            android:layout_marginEnd="@dimen/size_10dp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:id="@+id/login_signup_button"
            android:background="@drawable/custom_ripple_effect_3"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_ripple_effect_3"
            android:padding="@dimen/size_10dp"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/size_15dp"
            android:layout_marginStart="@dimen/size_10dp"
            android:layout_marginEnd="@dimen/size_10dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:clickable="true"
            android:focusable="true"
            android:id="@+id/login_signup_google_button">

            <ImageView
                android:layout_width="@dimen/size_30dp"
                android:layout_height="@dimen/size_30dp"
                android:src="@drawable/ic_google"
                android:layout_gravity="center"
                android:contentDescription="@string/signup_using_google"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:text="@string/signup_using_google"
                android:layout_marginStart="@dimen/size_10dp"
                android:gravity="center"
                android:layout_gravity="center"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/dont_have_account"
            android:layout_marginTop="@dimen/size_30dp"
            android:textSize="@dimen/textsize_16sp"
            android:id="@+id/login_signup_alternate_text"
            android:textColor="@color/colorWhite" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/signup"
            android:layout_marginTop="@dimen/size_5dp"
            android:textSize="@dimen/textsize_16sp"
            android:id="@+id/login_signup_alternate"
            android:textColor="@color/colorBlue" />

    </LinearLayout>

</LinearLayout>