<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DashboardActivity"
    android:background="@color/colorLightBrown"
    android:padding="@dimen/size_10dp"
    android:id="@+id/dashboard_main_view">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/size_15dp"
        android:layout_marginBottom="@dimen/size_100dp"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/dashboard_main_menu"
        app:cardBackgroundColor="@color/colorTransparent"
        android:id="@+id/dashboard_main_logo">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_tictactoe_main"
            android:contentDescription="@string/app_name" />

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:id="@+id/dashboard_main_menu">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="@dimen/size_150dp"
                android:background="@drawable/custom_ripple_effect_1"
                android:id="@+id/dashboard_local_play_button">
                <ImageView
                    android:layout_width="match_parent"
                    android:scaleType="fitXY"
                    android:layout_height="@dimen/size_120dp"
                    android:src="@drawable/play_friend"></ImageView>
                <TextView
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:layout_marginBottom="@dimen/size_5dp"
                    android:layout_gravity="bottom"
                    android:layout_height="@dimen/size_30dp"
                    android:layout_marginStart="@dimen/size_5dp"
                    android:layout_marginEnd="@dimen/size_5dp"
                    android:text="@string/play_offline"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/textsize_18sp"
                    />

            </LinearLayout>

            <Button
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_marginEnd="@dimen/size_5dp"
                android:layout_marginStart="@dimen/size_5dp"
                android:layout_height="@dimen/size_150dp"
                android:background="@drawable/custom_ripple_effect_1"
                android:text="@string/play_offline"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/textsize_18sp"
                android:id="@+id/dashboard_local_play_button"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/size_15dp"
            android:id="@+id/dashboard_local_play_view"
            android:visibility="gone">

            <Button
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_50dp"
                android:layout_marginStart="@dimen/size_50dp"
                android:layout_marginEnd="@dimen/size_50dp"
                android:background="@drawable/custom_ripple_effect_2"
                android:text="@string/with_person"
                android:id="@+id/dashboard_local_play_with_friend_button"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/textsize_18sp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_50dp"
                android:layout_marginTop="@dimen/size_15dp"
                android:layout_marginStart="@dimen/size_50dp"
                android:layout_marginEnd="@dimen/size_50dp"
                android:background="@drawable/custom_ripple_effect_2"
                android:text="@string/with_cpu"
                android:id="@+id/dashboard_local_play_with_ai_button"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/textsize_18sp"/>


        </LinearLayout>


        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_50dp"
            android:layout_marginStart="@dimen/size_25dp"
            android:layout_marginEnd="@dimen/size_25dp"
            android:background="@drawable/custom_ripple_effect_1"
            android:text="@string/play_online"
            android:layout_marginTop="@dimen/size_15dp"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/textsize_18sp"
            android:id="@+id/dashboard_real_time_play_button"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_50dp"
            android:layout_marginStart="@dimen/size_25dp"
            android:layout_marginEnd="@dimen/size_25dp"
            android:background="@drawable/custom_ripple_effect_1"
            android:text="@string/share_app"
            android:layout_marginTop="@dimen/size_15dp"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:id="@+id/dashboard_invite_friends"
            android:textSize="@dimen/textsize_18sp"/>

    </LinearLayout>



    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/setting"
        android:src="@drawable/ic_setting"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:clickable="true"
        android:focusable="true"
        android:onClick="SettingActivity"
        android:id="@+id/dashboard_setting"
        android:layout_marginBottom="@dimen/size_30dp"/>


</RelativeLayout>