<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="@dimen/size_5dp"
    android:layout_marginTop="@dimen/size_5dp"
    android:layout_marginBottom="@dimen/size_5dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_10dp"
        android:layout_marginStart="@dimen/size_10dp"
        android:textSize="@dimen/textsize_16sp"
        android:id="@+id/search_room_type"
        android:drawablePadding="@dimen/size_5dp"
        android:gravity="center_vertical"
        android:textColor="@color/colorLightBlue" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="@dimen/size_10dp"
        android:layout_marginTop="@dimen/size_30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/size_45dp"
            android:text="@string/app_name"
            android:gravity="center"
            android:layout_weight="1"
            android:textSize="@dimen/textsize_16sp"
            android:textColor="@color/colorWhite"
            android:background="@drawable/custom_edittext_1"
            android:layout_marginEnd="@dimen/size_5dp"
            android:id="@+id/search_owner_name"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/size_45dp"
            android:text="@string/name_hint"
            android:gravity="center"
            android:layout_weight="1"
            android:textSize="@dimen/textsize_16sp"
            android:textColor="@color/colorWhite"
            android:background="@drawable/custom_edittext_1"
            android:layout_marginStart="@dimen/size_5dp"
            android:id="@+id/search_room_name"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="@dimen/size_45dp"
            android:background="@drawable/custom_ripple_effect_6"
            android:textAllCaps="false"
            android:text="@string/join"
            android:textColor="@color/colorWhite"
            android:layout_marginStart="@dimen/size_5dp"
            android:id="@+id/search_join_button"/>

    </LinearLayout>


</androidx.cardview.widget.CardView>