<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="@dimen/size_15dp"
    android:layout_margin="@dimen/size_10dp"
    android:padding="@dimen/size_20dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/size_10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textsize_24sp"
            android:textColor="@color/colorLightBlue"
            android:text="@string/tell_us_name"
            android:textAllCaps="false"
            android:id="@+id/set_up_name_title"
            android:layout_marginTop="@dimen/size_15dp"/>


        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_45dp"
            android:layout_marginTop="@dimen/size_15dp"
            android:background="@drawable/custom_edittext_1"
            android:textColorHint="@color/colorGray"
            android:textColor="@color/colorWhite"
            android:padding="@dimen/size_10dp"
            android:maxLines="1"
            android:maxLength="20"
            android:hint="@string/name_hint"
            android:id="@+id/set_up_name_field"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/number_of_matches_view"
            android:layout_marginTop="@dimen/size_15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textsize_16sp"
                android:textColor="@color/colorLightBlue"
                android:text="@string/number_of_matches"
                android:layout_gravity="center"
                android:textAllCaps="false" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <ImageView
                    android:layout_width="@dimen/size_50dp"
                    android:layout_height="@dimen/size_50dp"
                    android:layout_marginEnd="@dimen/size_20dp"
                    android:tint="@color/colorLightBlue"
                    android:id="@+id/left_arrow"
                    android:src="@drawable/ic_left_arrow" />

                <TextView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:textSize="@dimen/textsize_24sp"
                    android:padding="@dimen/size_10dp"
                    android:gravity="center"
                    android:id="@+id/matches_counter"
                    android:background="@drawable/custom_border_1"
                    android:textColor="@color/colorWhite"/>

                <ImageView
                    android:layout_width="@dimen/size_50dp"
                    android:layout_height="@dimen/size_50dp"
                    android:layout_marginStart="@dimen/size_20dp"
                    android:src="@drawable/ic_right_arrow"
                    android:id="@+id/right_arrow"
                    android:tint="@color/colorLightBlue" />

            </LinearLayout>

        </LinearLayout>


        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_45dp"
            android:background="@drawable/custom_ripple_effect_3"
            android:layout_marginTop="@dimen/size_15dp"
            android:text="@string/submit"
            android:textColor="@color/colorWhite"
            android:layout_marginBottom="@dimen/size_20dp"
            android:id="@+id/set_up_name_field_button"/>
    </LinearLayout>



</androidx.cardview.widget.CardView>